# rules

./: .cursorrules  AGENTS.md  AGENTS_OVERVIEW.md  AGENTS_REFERENCE.md  AGENTS_WORKFLOWS.md  ANOTHER_PROJECT_EXAMPLE_CLAUDE.md  CLAUDE.md  COMPLETION_SUMMARY.md  CURSOR_FP_PRINCIPLES.md  CURSOR_WORKFLOW_GUIDE.md  FP_GUIDE_README.md  GEMINI.md  KIMI.md  MIGRATION_GUIDE.md  README.md  automatic-chain-generation-guide.md  automatic-type-generation-guide.md  code-style.mdc  how-to-use-fp-style-guides.md  kotlin-fp-style-guide.md  python-fp-style-guide.md  swift-fp-style-guide.md  traversable-foldable-guide.md  typescript-fp-style-guide.md
code_guidelines/: index.json
cursor/: CURSOR.md  CURSOR_WORKFLOW_GUIDE.md  DATA_STRUCTURE_PATTERNS.md  FILE_LOCATIONS_USER_GUIDE.md  NAMING_CONVENTION.md  SETUP_GUIDE.md  haskell-fp-style-guide.md  python-fp-style-guide.md  rust-fp-style-guide.md  typescript-fp-style-guide.md
cursor/examples/rust_project/: .cursorrules  Cargo.toml  README.md
cursor/examples/rust_project/src/: lib.rs  main.rs  types.rs
cursor/examples/rust_project/tests/: integration_test.rs
docs/: ARCHITECTURE_PLAN.md
gemini/: FP_GUIDE_README.md  GEMINI.md  GEMINI_FP_PRINCIPLES.md  GEMINI_WORKFLOW_GUIDE.md  SETUP_GUIDE.md  automatic-chain-generation-guide.md  automatic-type-generation-guide.md  haskell-fp-style-guide.md  kotlin-fp-style-guide.md  python-fp-style-guide.md  rust-fp-style-guide.md  swift-fp-style-guide.md  typescript-fp-style-guide.md
kimi/: DATA_STRUCTURE_PATTERNS.md  FILE_LOCATIONS_USER_GUIDE.md  KIMI_FP_PRINCIPLES.md  KIMI_WORKFLOW_GUIDE.md  (+10 more)
(+153 files in other folders)
