[package]
name = "rust_project"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
futures = "0.3"

[dev-dependencies]
criterion = "0.5"
quickcheck = "1.0"

[[bench]]
name = "benchmark"
harness = false

